fix bug gift page on tablet

--- a/assets/sass/_gift.scss
+++ b/assets/sass/_gift.scss
@@ -85,27 +85,29 @@
 /*==================== MEDIA QUERIES ====================*/
 /* PC: width >= 1024px */
 @media (min-width: 64em) {
+
 }
 
 /* Tablet and mobile: width < 1024px */
 @media (max-width: 64.625em) {
-}
-
-/* Tablet: width >= 740px and width < 1024px */
-@media (min-width: 46.25em) and (max-width: 64.625em) {
-  .box-random-gift__normal img {
-    width: 21%!important;
-  }
-}
-
-/* Mobile: width < 740px */
-@media (max-width: 46.1875em) {
   .box-wrapper__center {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
   }
+}
+
+/* Tablet: width >= 740px and width < 1024px */
+@media (min-width: 46.25em) and (max-width: 64.625em) {
+  .box-random-gift__normal img {
+    width: 35%!important;
+  }
+}
+
+/* Mobile: width < 740px */
+@media (max-width: 46.1875em) {
+
   .title-gift {
     font-size: 1.2rem;
   }
